--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,6 @@
     <title>AI旅行规划师</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
-    <script src="{{ url_for('static', filename='js/microphone-diagnostic.js') }}"></script>
 </head>
 <body>
     <!-- 导航栏 -->
@@ -57,6 +56,7 @@
                             <button id="stopRecordBtn" class="btn-secondary">停止</button>
                         </div>
                         <div id="recognitionResult" class="recognition-result"></div>
+                        <button id="generatePlanFromVoiceBtn" class="btn-primary" onclick="generateTravelPlan()" style="display: none; margin-top: 1rem;">生成旅行计划</button>
                     </div>
                 </div>
 
@@ -194,7 +194,8 @@
         <p>正在生成旅行计划...</p>
     </div>
 
-    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/audio-recorder.js') }}?v=5"></script>
+        <script src="{{ url_for('static', filename='js/app.js') }}?v=12"></script>
 </body>
 </html>
 
